--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -47,7 +47,7 @@ Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo
 \label{fig:pendulo}
 \end{figure}
 
-onde $\theta$ é o angulo de inclinação do pêndulo em relação a origem (linha tracejada).
+onde $\theta$ é o angulo de inclinação do pêndulo em relação a origem (linha tracejada) e $L$ é o comprimento do pêndulo.
 
 Este pêndulo pode ser modelado eletricamente pelo circuito da Figura \ref{fig:pendulo-equivalente}:
 
@@ -76,7 +76,7 @@ Para minimizar o efeito de \textit{ripple} de tensão elétrica da fonte de alim
 	\label{eq:incerteza-regulador}
 \end{equation}
 
-\subsection{Aquisição da resposta temporal do pêndulo}
+\subsection{Modelagem do sistema de aquisição de dados do pêndulo}
 
 Para obter a resposta temporal do pêndulo, utilizamos um mecanismo de aquisição de dados conforme a figura \ref{fig:pendulo-fluxo-medidas}:
 
@@ -156,7 +156,8 @@ onde a função de transferência resultante é dada pela equação \ref{eq:filt
 
 \begin{equation}
 	\small
-	\frac{V_{out}}{V_{in}} = \frac{s^4}{s^4\left(C_1 C_2 s^2 \left(\frac{1}{C_2 s}\left(R_1+R_2\right)+R_1 R_2\right)+1\right) \left(C_3 C_4 s^2 \left(\frac{1}{C_4 s}\left(R_3+R_4\right)+R_3 R_4\right)+1\right)}
+	\frac{V_{out}}{V_{in}} = \frac{1}{\left(C_1 C_2 R_1 R_2 s^2+C_1 R_1 s+C_1 R_2 s+1\right) \left(C_3 C_4 R_3 R_4
+   s^2+C_3 R_3 s+C_3 R_4 s+1\right)}
 	\label{eq:filtro-tf-completa}
 \end{equation}
 
@@ -168,6 +169,9 @@ Os pólos da função de transferência da equação \ref{eq:filtro-tf-completa}
 	p_{3} &=& \frac{-\sqrt{\left(C_3 R_3+C_3 R_4\right){}^2-4 C_3 C_4 R_3 R_4}-C_3 R_3-C_3 R_4}{2 C_3 C_4 R_3 R_4} \label{eq:filtro-tf-polo3} \\
 	p_{4} &=& \frac{\sqrt{\left(C_3 R_3+C_3 R_4\right){}^2-4 C_3 C_4 R_3 R_4}-C_3 R_3-C_3 R_4}{2 C_3 C_4 R_3 R_4}\label{eq:filtro-tf-polo4} 
 \end{eqnarray}
+
+\noindent
+onde $p_1$, $p_2$, $p_3$ e $p_4$ são os pólos da função da transferência ideal do filtro.
 
 Resolvendo as equações \ref{eq:filtro-tf-polo1}, \ref{eq:filtro-tf-polo2}, \ref{eq:filtro-tf-polo3} e \ref{eq:filtro-tf-polo4} para a frequência de 100 Hz, uma possível solução para o valores (utilizando valores comerciais de resistores e capacitores) é dada pela tabela \ref{tab:filtro-valores}:
 
@@ -207,7 +211,7 @@ onde $f$ é a função de medição, $\delta_f$ é a incerteza propagada para $f
 
 \todo{referenciar o script do mathematica}
 
-Com o software Wolfram Mathematica, é fácil aproximar a incerteza propagada dos valores dos componentes adicionados ao filtro para a frequência de corte real do filtro. Nas Equações \ref{eq:incerteza-polo-1} e \ref{eq:incerteza-polo-2}, estão indicadas as incertezas propagadas da frequência de corte para cada um dos pólos do filtro.
+Com o software Wolfram Mathematica, é fácil aproximar a incerteza propagada dos valores dos componentes adicionados ao filtro para a frequência de corte real do filtro. Nas Equações \ref{eq:incerteza-polo-1} e \ref{eq:incerteza-polo-2}, estão indicadas as incertezas propagadas da frequência de corte para cada um dos pólos do filtro. Neste cálculo, as incertezas de parâmetros do amplificador operacional foram desconsideradas para simplificar os cálculos.
 
 \begin{eqnarray}
 	f_{1,2} = 98 \pm 20 \label{eq:incerteza-polo-1} \\
@@ -217,9 +221,15 @@ Com o software Wolfram Mathematica, é fácil aproximar a incerteza propagada do
 \noindent
 onde $f_{1,2}$ é a frequência de corte para os pólos 1 e 2 e $f_{3,4}$ é a frequência de corte para os pólos 3 e 4.
 
+Logo, através da análise anterior, podemos concluir que mesmo no pior caso de incerteza dos componentes, o filtro ainda não será fator que cause influência no valor amostrado.
+
+Para o processo de amostragem E4, o DAQ USB-6009 da National Instruments foi utilizado para levantar os dados. A entrada lógica deste dispositivo possui 14 bits e uma taxa de amostragem de 48 $kS/s$ e possui uma resolução de tensão elétrica na entrada analógica de $1.53 mV$.
+
+No processo 
+
 \subsection{Levantamento da função de transferência do pêndulo}
 
-Para poder estimar o valor do angulo de inclinação do pêndulo em função da tensão elétrica medida pelo fluxo de medida mostrado na figura \ref{fig:pendulo-fluxo-medidas}, precisa-se definir a função de transferência para os 3 blocos definidos na figura \ref{fig:pendulo-cadeia-medidas}.
+Para poder estimar o valor do angulo de inclinação do pêndulo em função da tensão elétrica medida pelo fluxo de medida mostrado na figura \ref{fig:pendulo-fluxo-medidas} e utilizando as funções de transferência definidas para cada um dos blocos, pode-se realizar a extração da função de transferência experimental do pêndulo.
 
 A função de transferência para o sensor já foi obtida no experimento anterior e é dada na equação \ref{eq:pendulo-tf-forma}. Contudo, para utilizá-la nas medidas realizadas, é preciso que a função de transferência inversa seja obtida, conforme a equação \ref{eq:pendulo-tf-forma-inversa}
 
@@ -230,32 +240,34 @@ A função de transferência para o sensor já foi obtida no experimento anterio
 
 onde $\theta$ é a inclinação do pêndulo em radianos, $V^{-1}(\theta)$ é a inversa da função de transferência do pêndulo modelada anteriormente, $\theta_0$ é o offset de angulo correspondente ao offset inicial de tensão elétrica e $\theta_1$ é a constante que define a variação de inclinação em função de uma variação de tensão elétrica do sensor.
 
-A função de transferência do buffer de tensão é simples de modelar, uma vez que seu comportamento consiste em não realizar nenhuma alteração no valor de entrada, pode-se modelar usando uma função onde e saída é igual ao valor de tensão da entrada, conforme a equação \ref{eq:pendulo-tf-buffer}:
+Para que seja possível comparar os resultados obtidos com e sem o circuito condicionador, é imprescindível que sejam extraídas as funções de transferências equivalentes do pêndulo nas duas situações.
 
-\begin{equation}
-	V_{\text{buffer}} = 1 \times V_{\text{in}}	
-	\label{eq:pendulo-tf-buffer}
-\end{equation}
+Para extrair a função de transferência experimental do pêndulo sem condicionamento foi utilizado um multímetro \todo{qual?} com as seguintes especificações informadas pelo fabricante. \todo{colocar as especificações}.
 
-\todo{como modelar a TF do filtro?}
+Foi medida a tensão elétrica sobre um dos resistores intermediários do modelo elétrico do pêndulo conforme a figura \ref{fig:pendulo-equivalente} onde o o pêndulo era alimentado com uma tensão elétrica simétrica de -5V e +5V. Foram feitas medidas em intervalos de 10 em 10 graus de -90 a +90 graus com duas repetições cada.
 
-Por fim, pode-se calcular a função de transferência equivalente do sistema que é a concatenação de todas funções de transferência na sequência em que foram conectadas na cadeia de medida, a equação \ref{eq:pendulo-tf-concat} expressa esta relação de forma matemática:
+\label{sec:pendulo-calibracao-condicionado}
 
-\begin{equation}
-	\theta = V_{\text{buffer}}(V_{\text{sensor}}(V_{\text{medido}}))
-	\label{eq:pendulo-tf-concat}
-\end{equation}
+Para extrair a função de transferência experimental do pêndulo com todo circuito de condicionamento acoplado à ele foi utilizado um simples programa no LabVIEW que extrai 500 amostras do sinal à uma frequência de 1kHz e calcula a média destes valores. O valor da média das 500 amostras era utilizado como uma única medida. Assumindo que o ruído gerado pelo conversor analógico-digital ou outra parte do circuito condicionador seja ruído Gaussiano aditivo branco (AWGN) com média zero logo, a variável estocástica de ruído produzida pelo condicionamento será minimizada.
 
-Substituindo-se estes valores, temos que a função de transferência completa do sistema é dada por \label{eq:pendulo-tf-bloco}
+Com o pêndulo alimentado na mesma forma do experimento sem condicionamento, dispositivo DAQ foi configurado com entradas digitais diferenciais com o terminal negativo conectado ao terra analógico do regulador de tensão elétrica e o terminal positivo conectado ao pino intermediário do potenciômetro do pêndulo.
 
-\begin{equation}
-	\theta = V_{\text{sensor}}(V) = \theta_0 + \theta_1 \times V
-	\label{eq:pendulo-tf-bloco}
-\end{equation}
+Conforme o experimento sem condicionamento, o experimento realizado foi fatorial completo com 1 fato controlável à 19 níveis (de -90 à +90 graus) com 2 repetições por célula.
+
+Após a realização das medidas sem e com condicionamento, foi feito um ajuste de curvas no software Wolfram Mathematica para obter a função de transferência experimental para cada um dos experimentos que deve ser dada na forma da equação \ref{eq:pendulo-tf-forma-inversa}.
+
+\subsection{Curva temporal do pêndulo}
+
+Para extrair a curva temporal do pêndulo foi utilizada uma configuração igual à do experimento de calibração (página \pageref{sec:pendulo-calibracao-condicionado}) onde o programa do LabVIEW utilizado realizava a aquisição dos dados de forma temporal à uma taxa de amostragem de 250 Hz com 2000 amostras totalizando 8 segundos de aquisição de dados.
+
+O formato de onda foi exportado em formato TSV (\textit{tab separated values}) que pode ser importado diretamente no MATLAB, no Wolfram Mathematica ou no LabVIEW posterior à aquisição para processamento dos dados. O formato escolhido foi feito pela facilidade de importação em praticamente qualquer programa que possa manipular os dados. Não foi adicionada nenhuma \textit{header} ao arquivo.
+
+Após a aquisição dos dados, o script do MATLAB localizado na página \todo{referenciar o script}, foi executado para gerar os gráficos e realizar a transformada de Fourier do sinal adquirido.
 
 \section{Efeitos Físicos Utilizados em Sensores}
+
 \subsection{Sensor de Efeito Hall}
-Neste experimento foi interfaceado o módulo sensor de \textit{Efeito Hall Linear}, apresentado na Figura \ref{fig:efeito-hall}, com a Placa DAQ disponibilizada em laboratório.
+Neste experimento foi feita a interface com um módulo sensor de \textit{Efeito Hall Linear}, apresentado na Figura \ref{fig:efeito-hall}, com a Placa DAQ disponibilizada em laboratório.
 
 \begin{figure}[H]
 \centering
